@@ -28,6 +28,7 @@
 
 #include "vcurveangle.h"
 #include "../vgeometry/vabstractcurve.h"
+#include "../vgeometry/vspline.h"
 
 //---------------------------------------------------------------------------------------------------------------------
 VCurveAngle::VCurveAngle()
@@ -45,12 +46,30 @@ VCurveAngle::VCurveAngle(const quint32 &id, const quint32 &parentId, const VAbst
     if (angle == CurveAngle::StartAngle)
     {
         SetValue(curve->GetStartAngle());
-        SetName(QString(angle1_V+"%1").arg(curve->name()));
+        SetName(angle1_V + curve->name());
     }
     else
     {
         SetValue(curve->GetEndAngle());
-        SetName(QString(angle2_V+"%1").arg(curve->name()));
+        SetName(angle2_V + curve->name());
+    }
+}
+
+//---------------------------------------------------------------------------------------------------------------------
+VCurveAngle::VCurveAngle(const quint32 &id, const quint32 &parentId, const QString &baseCurveName, const VSpline &spl,
+                         CurveAngle angle, qint32 segment)
+    :VCurveVariable(id, parentId)
+{
+    SetType(VarType::CurveAngle);
+    if (angle == CurveAngle::StartAngle)
+    {
+        SetValue(spl.GetStartAngle());
+        SetName(angle1_V + baseCurveName + QLatin1String("_") + seg_ + QString().setNum(segment));
+    }
+    else
+    {
+        SetValue(spl.GetEndAngle());
+        SetName(angle2_V + baseCurveName + QLatin1String("_") + seg_ + QString().setNum(segment));
     }
 }
 
