@@ -28,6 +28,7 @@
 
 #include "vcurvelength.h"
 #include "../vgeometry/vabstractcurve.h"
+#include "../vgeometry/vspline.h"
 
 //---------------------------------------------------------------------------------------------------------------------
 VCurveLength::VCurveLength()
@@ -44,6 +45,18 @@ VCurveLength::VCurveLength(const quint32 &id, const quint32 &parentId, const VAb
     SCASSERT(curve != nullptr);
     SetName(curve->name());
     SetValue(FromPixel(curve->GetLength(), patternUnit));
+}
+
+//---------------------------------------------------------------------------------------------------------------------
+VCurveLength::VCurveLength(const quint32 &id, const quint32 &parentId, const QString &baseCurveName, const VSpline &spl,
+                           Unit patternUnit, qint32 segment)
+    :VCurveVariable(id, parentId)
+{
+    SCASSERT(not baseCurveName.isEmpty())
+
+    SetType(VarType::CurveLength);
+    SetName(baseCurveName + QLatin1String("_") + seg_ + QString().setNum(segment));
+    SetValue(FromPixel(spl.GetLength(), patternUnit));
 }
 
 //---------------------------------------------------------------------------------------------------------------------
