@@ -33,12 +33,15 @@
 #include "../ifc/ifcdef.h"
 
 class VAbstractCurve;
+class VSpline;
 
 class VCurveLength : public VCurveVariable
 {
 public:
     VCurveLength();
     VCurveLength(const quint32 &id, const quint32 &parentId, const VAbstractCurve *curve, Unit patternUnit);
+    VCurveLength(const quint32 &id, const quint32 &parentId, const QString &baseCurveName, const VSpline &spl,
+                 Unit patternUnit, qint32 segment);
     VCurveLength(const VCurveLength &var);
     VCurveLength &operator=(const VCurveLength &var);
     virtual ~VCurveLength() Q_DECL_OVERRIDE;
