@@ -366,20 +366,21 @@ void VTranslateVars::InitPatternMakingSystems()
 //---------------------------------------------------------------------------------------------------------------------
 void VTranslateVars::InitVariables()
 {
-    variables.insert(line_, translate("VTranslateVars", "Line_", "Left symbol _ in name"));
-    variables.insert(angleLine_, translate("VTranslateVars", "AngleLine_", "Left symbol _ in name"));
-    variables.insert(arc_, translate("VTranslateVars", "Arc_", "Left symbol _ in name"));
-    variables.insert(spl_, translate("VTranslateVars", "Spl_", "Left symbol _ in name"));
-    variables.insert(splPath, translate("VTranslateVars", "SplPath", "Do not add symbol _ to the end of name"));
-    variables.insert(radiusArc_, translate("VTranslateVars", "RadiusArc_", "Left symbol _ in name"));
-    variables.insert(angle1Arc_, translate("VTranslateVars", "Angle1Arc_", "Left symbol _ in name"));
-    variables.insert(angle2Arc_, translate("VTranslateVars", "Angle2Arc_", "Left symbol _ in name"));
-    variables.insert(angle1Spl_, translate("VTranslateVars", "Angle1Spl_", "Left symbol _ in name"));
-    variables.insert(angle2Spl_, translate("VTranslateVars", "Angle2Spl_", "Left symbol _ in name"));
+    variables.insert(line_, translate("VTranslateVars", "Line_", "Left symbol _ in the name"));
+    variables.insert(angleLine_, translate("VTranslateVars", "AngleLine_", "Left symbol _ in the name"));
+    variables.insert(arc_, translate("VTranslateVars", "Arc_", "Left symbol _ in the name"));
+    variables.insert(spl_, translate("VTranslateVars", "Spl_", "Left symbol _ in the name"));
+    variables.insert(splPath, translate("VTranslateVars", "SplPath", "Do not add symbol _ to the end of the name"));
+    variables.insert(radiusArc_, translate("VTranslateVars", "RadiusArc_", "Left symbol _ in the name"));
+    variables.insert(angle1Arc_, translate("VTranslateVars", "Angle1Arc_", "Left symbol _ in the name"));
+    variables.insert(angle2Arc_, translate("VTranslateVars", "Angle2Arc_", "Left symbol _ in the name"));
+    variables.insert(angle1Spl_, translate("VTranslateVars", "Angle1Spl_", "Left symbol _ in the name"));
+    variables.insert(angle2Spl_, translate("VTranslateVars", "Angle2Spl_", "Left symbol _ in the name"));
     variables.insert(angle1SplPath, translate("VTranslateVars", "Angle1SplPath",
-                                              "Do not add symbol _ to the end of name"));
+                                              "Do not add symbol _ to the end of the name"));
     variables.insert(angle2SplPath, translate("VTranslateVars", "Angle2SplPath",
-                                              "Do not add symbol _ to the end of name"));
+                                              "Do not add symbol _ to the end of the name"));
+    variables.insert(seg_, translate("VTranslateVars", "Seg_", "Segment. Left symbol _ in the name"));
 }
 
 //---------------------------------------------------------------------------------------------------------------------
