@@ -92,12 +92,12 @@ VToolCubicBezierPath *VToolCubicBezierPath::Create(const quint32 _id, VCubicBezi
     if (typeCreation == Source::FromGui)
     {
         id = data->AddGObject(path);
-        data->AddCurve(data->GeometricObject<VAbstractCurve>(id), id);
+        data->AddCurveWithSegments(data->GeometricObject<VAbstractCubicBezierPath>(id), id);
     }
     else
     {
         data->UpdateGObject(id, path);
-        data->AddCurve(data->GeometricObject<VAbstractCurve>(id), id);
+        data->AddCurveWithSegments(data->GeometricObject<VAbstractCubicBezierPath>(id), id);
         if (parse != Document::FullParse)
         {
             doc->UpdateToolData(id, data);
